Salesforce/main/default/main/default/objects/Campanha_DONMARIO_Valoriza__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <description>Total DONMARIO Valoriza</description>
    <label>Total R$</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>