Salesforce/main/default/main/default/objects/Campanha_DONMARIO_Valoriza__c/fields/Total_NF__c.field-meta.xml
<CustomField>
    <fullName>Total_NF__c</fullName>
    <label>Total NF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>