Salesforce/main/default/main/default/objects/Campanha_DONMARIO_Valoriza__c/fields/Vendedor__c.field-meta.xml
<CustomField>
    <fullName>Vendedor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>ID Vendedor DONMARIO Valoriza</description>
    <label>Contacto</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Campanhas DONMARIO Valoriza</relationshipLabel>
    <relationshipName>Campanhas_DONMARIO_Valoriza</relationshipName>
    <type>Lookup</type>
</CustomField>